--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="form-row">
                     <input class="form-field" type="tel" placeholder="+382" required>
-                    <input class="form-field" type="text" placeholder="Эл. почта" required>
+                    <input class="form-field" type="email" placeholder="Эл. почта" required>
                 </div>
 
                 <button class="btn-custom" type="submit">Порвать всех!</button>
